--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -98,7 +98,7 @@ page {
   margin-top: 30rpx;
 }
 
-.nav2 {
+.nav3 {
   display: flex;
   flex-direction: row;
   background-color: #fff;
@@ -107,17 +107,17 @@ page {
   color: #b6b6b6;
 }
 
-.item1 {
+.item2 {
   width: 60rpx;
   margin-left: 240rpx;
 }
 
-.item2 {
+.item1 {
   width: 60rpx;
   margin-left: 120rpx;
 }
 
-.active {
+.cactive {
   border-bottom: 4rpx solid #f59aac;
   font-weight: bold;
   padding-bottom: 10rpx;
