--- a/pages/chose/chose.wxml
+++ b/pages/chose/chose.wxml
@@ -13,7 +13,7 @@
   </view>
 </view>
 <view style='height:{{height4*2+20}}px;' class='pad'></view>
-<view class='b tit ml40'>您觉得自己哪些地方可以更美呢？</view>
+<view class='b tit ml40'>您想要了解哪些方面呢？</view>
 <view class='r1 chose f40 b'>
   <view data-index="{{index}}" data-name="{{item.title}}" data-id="{{item.id}}" bindtap='ischose' wx:for="{{cdata}}" wx:key="{{index}}" class='citem {{item.id==index ? "bg1" : "bg2"}}'>{{item.title}}</view>
 </view>
@@ -28,4 +28,5 @@
   <input focus='{{focus2}}' bindfocus='bindfocus' adjust-position='{{false}}' maxlength='8' bindinput='inputVal' bindblur='bindblur' value='{{inputVal}}' class='inp ml40 b'></input>
   <view wx:if="{{inputVal!=''}}" style='background:linear-gradient(to right,#58e6c8, #58c2db);padding-top:10rpx;height:40rpx;width:50rpx;border-radius:50%;color:#fff;text-align:center;font-size:32rpx;margin-top:10rpx;' class='iconfont icon-xuanze'></view>
 </view>
-<button bindtap="{{list.length>=1&&inputVal!=''? 'upload' : ''}}" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>开始变更美</button>
+<button wx:if="{{phone!=undefined&&phone!=null}}"  bindtap="{{list.length>=1&&inputVal!=''? 'upload' : ''}}" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>我要咨询</button>
+ <button wx:else open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>我要咨询</button>
