--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -4,7 +4,7 @@
   border-bottom: 1rpx solid #f5f5f5;
   padding-top:40rpx;
 padding-bottom:30rpx;
-
+background-color: #fff;
 }
 .hos-headimg{
   width: 150rpx;
