--- a/pages/chose/chose.wxml
+++ b/pages/chose/chose.wxml
@@ -29,6 +29,6 @@
   <input focus='{{focus2}}' bindfocus='bindfocus' adjust-position='{{false}}' maxlength='8' bindinput='inputVal' bindblur='bindblur' value='{{inputVal}}' class='inp ml40 b'></input>
   <view wx:if="{{inputVal!=''}}" style='background:linear-gradient(to right,#58e6c8, #58c2db);padding-top:10rpx;height:40rpx;width:50rpx;border-radius:50%;color:#fff;text-align:center;font-size:32rpx;margin-top:10rpx;' class='iconfont icon-xuanze'></view>
 </view>
-<button wx:if="{{phone!=undefined&&phone!=null}}" bindtap="{{list.length>=1&&inputVal!=''? 'upload' : ''}}" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>提交</button>
+<button form-type="submit" wx:if="{{phone!=undefined&&phone!=null}}" bindtap="{{list.length>=1&&inputVal!=''? 'upload' : ''}}" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>提交</button>
   <button wx:else form-type="submit"  open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class='cbtn {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>提交</button>
 </form>
