--- a/pages/doctor/doctor.wxml
+++ b/pages/doctor/doctor.wxml
@@ -2,7 +2,7 @@
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
   <view style='display: flex; justify-content: space-around;flex-direction: column'>
     <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
-      <view bindtap='goback'>
+      <view wx:if="{{getshare==0}}" bindtap='goback'>
         <image src='../../images/fanhui.png' mode='aspectFill' class='back-pre'></image>
       </view>
       <view bindtap='goIndex'>
@@ -18,7 +18,7 @@
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else>
-  <navigator hover-class='none' url='../doctorDetail/doctorDetail?id={{item.id}}' class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
+  <view bindtap='goDoctor' data-id="{{item.id}}" class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
     <view class='col hos-head'>
       <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
     </view>
@@ -38,6 +38,6 @@
         <!-- </text> -->
       </view>
     </view>
-  </navigator>
+  </view>
 
 </view>
