--- a/pages/doctorDetail/doctorDetail.wxml
+++ b/pages/doctorDetail/doctorDetail.wxml
@@ -79,7 +79,7 @@
     <view class='line3 mt20'></view>
     <view class='r1 mt30'>
       <view style='color:#58c2db;font-size:40rpx;margin-top:10rpx;' class='iconfont icon-weibiaoti-3'></view>
-      <view class='ml20 f26 b address'>{{hospital.address}}</view>
+      <view class='ml20 mt10 f26 b address'>{{hospital.address}}</view>
     </view>
   </view>
 </view>
